--- a/assets/css/_single.scss
+++ b/assets/css/_single.scss
@@ -25,6 +25,7 @@ iframe {
   //padding: 0.25em;
 }
 
+
 .video-container {
   background-color: $bg-text;
   padding: 0;
@@ -48,7 +49,7 @@ iframe {
 
     li {
       font-size: 13px;
-      font-weight: 400;
+      font-weight: 900;
       //padding-left: 0.5em;
       //padding-right: 0.5em;
       padding-bottom: 1.5em;
@@ -63,7 +64,7 @@ iframe {
 .download {
   @include BR-bottom(2px);
   background-color: $bg-text;
-   margin: 1em 0.5em;
+  margin: 1em 0.5em;
   text-align: center;
   
   .button-download {
@@ -75,6 +76,15 @@ iframe {
     display: inline-block;
     width: 100%;
     font-weight: bold;
+    
+  }
+}
+
+@media (min-width: 577px) {
+  /* Gaya CSS untuk tampilan non-mobile */
+  .download {
+    padding-left: 25%;
+    padding-right: 25%;
   }
 }
 
