--- a/assets/css/_typo.scss
+++ b/assets/css/_typo.scss
@@ -1,40 +1,3 @@
-// Definisi breakpoint
-$bp-s: 576px;
-$bp-l: 768px;
-$bp-xl: 1024px;
-$bp-xxl: 1280px;
-
-// Mixin breakpoint
-@mixin breakpoint($size) {
-  @media (min-width: #{$size}) {
-    & {
-      // Gaya CSS yang ingin diterapkan di breakpoint
-    }
-  }
-}
-
-// Contoh penggunaan mixin
-// .container {
-//   @include breakpoint($bp-s) {
-//     padding: 10px;
-//   }
-
-//   @include breakpoint($bp-l) {
-//     padding: 20px;
-//   }
-
-//   @include breakpoint($bp-xl) {
-//     padding: 30px;
-//   }
-
-//   @include breakpoint($bp-xxl) {
-//     padding: 40px;
-//   }
-// }
-
-
-
-
 
 $font : #cacaca;
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
@@ -52,6 +15,14 @@ body{
   color : $font;
   font-size: 14px;
 }
+@media (min-width: 577px) {
+  /* Gaya CSS untuk tampilan non-mobile */
+  body {
+    padding-left: 15%;
+    padding-right: 15%;
+  }
+}
+
 
 h1, h2, h3, h4, h5{
   color :#ff9900;
@@ -59,6 +30,6 @@ h1, h2, h3, h4, h5{
   font-weight: 600;
 }
 
-a{
+a {
   text-decoration: none;
 }
