--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -1,19 +1,18 @@
 {{ define "main" }}
-    <div class="video-container">
-<iframe width="100%" height="auto" src="https://d0000d.com/e/ezfe4rgufu3e" scrolling="no" frameborder="0" allowfullscreen="true"></iframe>
-  <h3>Video Naruto</h3>
+<div class="video-container">
+  <iframe width="100%" height="auto" src="https://d0000d.com/e/ezfe4rgufu3e" scrolling="no" frameborder="0" allowfullscreen="true"></iframe>
+  <h3>Bokep Mania</h3>
   <ul>
-    <li><i class="bi bi-clock"></i> 12 : 27</li>
-    <li><i class="bi bi-floppy"></i> 124 MB</li>
-    <li><i class="bi bi-calendar4-event"></i> Jan 3, 2024</li>
+    <li><i class="bi bi-clock"></i> 12 : 27
+    </li><li><i class="bi bi-floppy"></i>124 MB</li>
+    <li><i class="bi bi-calendar4-event"></i> Jan 3, 2024
+    </li>
   </ul>
-<a href="https://d000d.com/e/fp4qduhw31wo">
-  <div class="download">
-    <div class="button-download">
-      Download <i class="bi bi-arrow-right-short"></i>
+  <a href="https://d000d.com/e/fp4qduhw31wo">
+    <div class="download">
+      <div class="button-download"> Download <i class="bi bi-arrow-right-short"></i>
+      </div>
     </div>
-  </div>
-</a>
-    {{ partial "according" . }}
- 
-{{ end }}
+  </a>
+  {{ partial "according" . }}
+  {{ end }}
